WP-9135 bredcrumb alignment issue fixes

--- a/css/conditionals/voices-detail.css
+++ b/css/conditionals/voices-detail.css
@@ -434,6 +434,11 @@
 .node-type-voices .breadcrumb {
   padding: 0 0 0 35px;
 }
+@media (min-width: 64em) and (max-width: 74.9375em) {
+  .node-type-voices .breadcrumb {
+    padding-left: 0px;
+  }
+}
 .node-type-voices .field-name-social-buttons-top {
   border-bottom: 1px solid #979797;
   height: 75px;
