--- a/sass/partials/base/00-variables/_base.sass
+++ b/sass/partials/base/00-variables/_base.sass
@@ -91,3 +91,4 @@ $bp-tablet-pro-land: (min-width 1024px) (max-width 1366px) (orientation landscap
 $bp-tablet-gap: 1101px 1199px
 $bp-tablet-range: 768px 1199px
 $bp-desktop-custom-width: (min-width 1200px) (max-width 1320px)
+$bp-desktop-custm-width-new: (min-width 1024px) (max-width 1199px)
